Fixed over push on smaller devices

--- a/assets/css/2-modules/_header.sass
+++ b/assets/css/2-modules/_header.sass
@@ -16,7 +16,6 @@
 	top: 10px
 	left: 20px
 	background: white
-	transition: all 0.2s ease-in-out
 
 .navigation 
 	position: absolute
@@ -113,14 +112,15 @@
 
 	#header_navigation_mobile_button.right_push
 		position: fixed
-		right: 420px
+		right: 120px
 		transition: all 0.2s ease-in-out
 
 	.header_navigation_mobile_container.right_open
 		position: fixed
+		width: 100px
 		right: 0px
 		transition: all 0.2s ease-in-out
 
 	.page_container.open
-		left: -400px
+		left: -100px
 		transition: all 0.2s ease-in-out
